--- a/index.html
+++ b/index.html
@@ -1,1 +1,67 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Simple Website</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+        section {
+            padding: 40px;
+            text-align: center;
+        }
+        .container {
+            max-width: 800px;
+            margin: auto;
+        }
+        .section-heading {
+            font-size: 24px;
+            margin-bottom: 20px;
+        }
+        .section-content {
+            font-size: 18px;
+            line-height: 1.6;
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+            margin-bottom: 20px;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Welcome to My Website</h1>
+    </header>
+    <main>
+        <section>
+            <div class="container">
+                <h2 class="section-heading">Section 1: About Us</h2>
+                <p class="section-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquam blandit nisi, et fermentum tortor vehicula ut.</p>
+                <img src="https://via.placeholder.com/800x400" alt="About Us">
+            </div>
+        </section>
+        <section style="background-color: #f4f4f4;">
+            <div class="container">
+                <h2 class="section-heading">Section 2: Our Team</h2>
+                <p class="section-content">Integer sodales, sapien eget consectetur posuere, nisi nisl malesuada magna, vel auctor nunc libero vitae nisi.</p>
+                <img src="https://via.placeholder.com/800x400" alt="Our Team">
+            </div>
+        </section>
+    </main>
+    <footer>
+        <p style="text-align: center; padding: 20px;">&copy; 2024 Your Company</p>
+    </footer>
+</body>
+</html>
+
