--- a/index.html
+++ b/index.html
@@ -41,13 +41,18 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
+        <h1>Mary Briamonte</h1>
     </header>
     <main>
         <section>
             <div class="container">
-                <h2 class="section-heading">Section 1: About Us</h2>
-                <p class="section-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquam blandit nisi, et fermentum tortor vehicula ut.</p>
+                <h2 class="section-heading">Section 1: About Me</h2>
+                <p class="section-content">Hey! My name is Mary Briamonte. I am a sophomore at the University of Notre Dame majoring in computer engineering and minioring in Engineering Corporate Practice. I am from Holmdel, New Jersey.
+Academic Interests: coding, maybe research one day, data science
+Professional Interests: I think I want to work in the entertainment industry. I love music and movies, so hopefully I will do something with that one day. I currently work for FIM and ND Studios to film the athletic events on campus. And I am also an admissions tour guide. 
+Other Interests: I love to bake. Hopefully, I will open my own bakery one day. I am on the Irish Dance Team here, which is lots of fun. I play intramural volleyball, flag football, and I am technically on the Welsh Fam basketball team, but I am very bad. I want to see the world, so I hope that one day I get a job that involves travel. My favorite movie is Ferris Bueller’s Day Off. My favorite show is Gilmore Girls, but I also love Ted Lasso(but I haven’t finished Season 3 yet). 
+
+ </p>
                 <img src="https://via.placeholder.com/800x400" alt="About Us">
             </div>
         </section>
