--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Website</title>
+    <title>My Website</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -50,22 +50,21 @@
                 <p class="section-content">Hey! My name is Mary Briamonte. I am a sophomore at the University of Notre Dame majoring in computer engineering and minioring in Engineering Corporate Practice. I am from Holmdel, New Jersey.
 Academic Interests: coding, maybe research one day, data science
 Professional Interests: I think I want to work in the entertainment industry. I love music and movies, so hopefully I will do something with that one day. I currently work for FIM and ND Studios to film the athletic events on campus. And I am also an admissions tour guide. 
-Other Interests: I love to bake. Hopefully, I will open my own bakery one day. I am on the Irish Dance Team here, which is lots of fun. I play intramural volleyball, flag football, and I am technically on the Welsh Fam basketball team, but I am very bad. I want to see the world, so I hope that one day I get a job that involves travel. My favorite movie is Ferris Bueller’s Day Off. My favorite show is Gilmore Girls, but I also love Ted Lasso(but I haven’t finished Season 3 yet). 
-
+Other Interests: I love to bake. Hopefully, I will open my own bakery one day. I am on the Irish Dance Team here, which is lots of fun. I play intramural volleyball, flag football, and I am technically on the Welsh Fam basketball team, but I am very bad. I want to see the world, so I hope that one day I get a job that involves travel. My favorite movie is Ferris Bueller’s Day Off. 
  </p>
                 <img src="https://via.placeholder.com/800x400" alt="About Us">
             </div>
         </section>
         <section style="background-color: #f4f4f4;">
             <div class="container">
-                <h2 class="section-heading">Section 2: Our Team</h2>
-                <p class="section-content">Integer sodales, sapien eget consectetur posuere, nisi nisl malesuada magna, vel auctor nunc libero vitae nisi.</p>
+                <h2 class="section-heading">Section 2: Classes</h2>
+                <p class="section-content">Engineering Design, Engineering Computing, Fundamentals of Computing, Data Structures, Discrete Mathematics, Logic Design and Sequential Circuits, Systems Programming, Computer Architecture, Electric Circuits</p>
                 <img src="https://via.placeholder.com/800x400" alt="Our Team">
             </div>
         </section>
     </main>
     <footer>
-        <p style="text-align: center; padding: 20px;">&copy; 2024 Your Company</p>
+        <p style="text-align: center; padding: 20px;">&copy; 2024 Mary Briamonte</p>
     </footer>
 </body>
 </html>
