--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             <!-- -->
                             I’m</p>
                             <p class="mt-4 mb-4 text-6xl font-bold text-white">Mary Briamonte</p>
-                            <p class="mb-8 text-xl font-bold text-slate-300">I’m a Software Developer and a Senior at the University of Notre Dame.</p>
+                            <p class="mb-8 text-xl font-bold text-slate-300">I’m a Software Developer and a Junior at the University of Notre Dame.</p>
                             <div class="border-slate-300 border-b w-full h-[1px]"></div>
                             <div class="flex flex-row justify-around mt-8">
                                 <div class="p-2 text-4xl transition-transform border border-solid rounded-full hover:scale-110 text-slate-300 border-slate-300 hover:border-slate-500 hover:text-slate-500">
@@ -70,17 +70,9 @@
                                     </a>
                                 </div>
                                 <div class="p-2 text-4xl transition-transform border border-solid rounded-full hover:scale-110 text-slate-300 border-slate-300 hover:border-slate-500 hover:text-slate-500">
-                                    <a href="https://github.com/SConaway" class="" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
+                                    <a href="https://github.com/mbriamon" class="" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
                                         <svg stroke="currentColor" fill="none" stroke-width="2" viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
-                                        </svg>
-                                    </a>
-                                </div>
-                                <div class="p-2 text-4xl transition-transform border border-solid rounded-full hover:scale-110 text-slate-300 border-slate-300 hover:border-slate-500 hover:text-slate-500">
-                                    <a href="https://x.com/marybriamonte4" class="" target="_blank" rel="noopener noreferrer" aria-label="Twitter">
-                                        <svg stroke="currentColor" fill="none" stroke-width="2" viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">
-                                            <line x1="18" y1="6" x2="6" y2="18"></line>
-                                            <line x1="6" y1="6" x2="18" y2="18"></line>
                                         </svg>
                                     </a>
                                 </div>
@@ -168,7 +160,7 @@
                             <!-- -->
                             and tested assignments and procedures for an 8-week advanced chip design tapeout class at Howard University. My responsibilities as a Teaching Assistant included grading multiple labs and homework assignments, as well as hosting weekly office hours and numerous as-needed appointments to support student learning.
                         </p>
-                        <p class="mb-2">I coordinated with Cadence Design Systems and Muse Semiconductor to ensure the proper IP/PDK setup, enabling students to work seamlessly with the tools.</p>
+                        <p class="mb-2">I coordinated with Cadence Design  and Muse Semiconductor to ensure the proper IP/PDK setup, enabling students to work seamlessly with the tools.</p>
                         <p class="mb-2">In guiding student teams, I provided expertise in designing, testing, and verifying digital, analog/RF, and mixed-signal chips using industry-standard tools such as Verilog, Cadence Virtuoso, Xcelium, Genus, Innovus, Tempus, and Spectre. This guidance led to the successful completion of designs, culminating in a summer tapeout and fabrication.</p>
                         <hr class="my-6"/>
                         <p>Starting in the Summer of 2023, I have served as the ACES (Academically Collaborative Engineering Spaces) Programming Assistant and an ACES Peer Mentor at the University of Notre Dame. In this role, I have been responsible for the following:</p>
@@ -204,7 +196,7 @@
                         <p class="mb-2">
                             Now, in Spring 2024, I am a teaching assistant for the
                             <!-- -->
-                            <strong>Systems Programming</strong>
+                            <strong>` Programming</strong>
                             course. This course involves Bash scripting, Python, and C programming, as well as the use of various Linux tools, including <code>git</code>
                             , <code>make</code>
                             , and <code>valgrind</code>
