--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             <!-- -->
                             <!-- -->
                             I’m</p>
-                            <p class="mt-4 mb-4 text-6xl font-bold text-white">Mary Briamonte</p>
+                            <p class="mt-4 mb-4 text-6xl font-bold text-white">Mary Briamonteeeeee</p>
                             <p class="mb-8 text-xl font-bold text-slate-300">I’m a Software Developer and a Junior at the University of Notre Dame.</p>
                             <div class="border-slate-300 border-b w-full h-[1px]"></div>
                             <div class="flex flex-row justify-around mt-8">
