--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Mary Briamonte</title>
-  <meta name="description" content="Mayleen Liu, junior computer science student at the University of Notre Dame">
+  <meta name="description" content="Mary Briamonte, junior computer engineering student at the University of Notre Dame">
   <meta name="keywords" content="computer science, student, product management, software development">
 
   <!-- Favicons -->
