--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
         <section class="text-center">
             <h2>Links</h2>
-            <p><a href="teaching.html">Education</a></p>
-            <p><a href="publications.html">Experience</a></p>
+            <p><a href="education.html">Education</a></p>
+            <p><a href="experience.html">Experience</a></p>
         </section>
     </main>
 
