--- a/education.html
+++ b/education.html
@@ -24,7 +24,7 @@
         </section>
 
         <section class="text-center">
-            <p><a href="home.html">Back to Home</a></p>
+            <p><a href="index.html">Back to Home</a></p>
         </section>
     </main>
 
