--- a/home.html
+++ b/home.html
@@ -17,10 +17,26 @@
     <main class="container mt-5">
         <section class="text-center mb-4">
             <h2>About Me</h2>
-            <p>Hi, I'm <span id="name-placeholder">Mary Briamonte</span>! I am a computer engineering major at the University of Notre Dame.</p>
+            <p>Hi, I'm <span id="name-placeholder">Mary Briamonte</span>! I am a junior computer engineering major at the University of Notre Dame.</p>
             <button id="more-info" class="btn btn-info">Read More</button>
             <p id="additional-info" class="mt-4" style="display:none;">
-                I'm a [Your Profession] and enjoy working on [Your Projects]. I believe in the power of [Your Values].
+                hey! here are some fun facts! 
+                <br>
+                <strong>My Hobbies:</strong>
+                    <ul>
+                        <li>Baking</li>
+                        <li>Irish dance</li>
+                        <li>Watching movies</li>
+                        <li>Hanging with my sister</li>
+                        <li>Hiking</li>
+                    </ul>
+                one day when i retire ;) 
+                <br>
+                i will live in the house like the one the dad lives in, in the parent trap movie (lohan's version), 
+                <br>
+                and instead of a vineyard mine will be an apple orchard and i will have a horse to ride through the orchard, 
+                <br>
+                and i will use the apples to make fresh stuff for my bakery! :) <3.
             </p>
         </section>
 
