--- a/home.html
+++ b/home.html
@@ -20,23 +20,22 @@
             <p>Hi, I'm <span id="name-placeholder">Mary Briamonte</span>! I am a junior computer engineering major at the University of Notre Dame.</p>
             <button id="more-info" class="btn btn-info">Read More</button>
             <p id="additional-info" class="mt-4" style="display:none;">
-                hey! here are some fun facts! 
+                Hey! Here are some fun facts!  
+                <br><br>
+                <strong>My Hobbies:</strong>  
+                    Baking <br>
+                    Irish dance <br>
+                    Watching movies <br>
+                    Hanging with my sister <br>
+                    Hiking <br><br>
+    
+                One day when I retire ;)  
+                <br><br>
+                I will live in a house like the one the dad lives in, in the Parent Trap movie (Lohan's version),  
                 <br>
-                <strong>My Hobbies:</strong>
-                    <ul>
-                        <li>Baking</li>
-                        <li>Irish dance</li>
-                        <li>Watching movies</li>
-                        <li>Hanging with my sister</li>
-                        <li>Hiking</li>
-                    </ul>
-                one day when i retire ;) 
+                and instead of a vineyard, mine will be an apple orchard and I will have a horse to ride through the orchard.  
                 <br>
-                i will live in the house like the one the dad lives in, in the parent trap movie (lohan's version), 
-                <br>
-                and instead of a vineyard mine will be an apple orchard and i will have a horse to ride through the orchard, 
-                <br>
-                and i will use the apples to make fresh stuff for my bakery! :) <3.
+                I will use the apples to make fresh stuff for my bakery! :) ❤️  
             </p>
         </section>
 
