--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
             <p id="additional-info" class="mt-4" style="display:none;">
                 Hey! Here are some fun facts!  
                 <br><br>
-                <strong>My Hobbies:</strong>  
+                <strong>My Hobbies:</strong><br>  
                     Baking <br>
                     Irish dance <br>
                     Watching movies <br>
@@ -30,7 +30,7 @@
                     Hiking <br><br>
     
                 One day when I retire ;)  
-                <br><br>
+                <br>
                 I will live in a house like the one the dad lives in, in the Parent Trap movie (Lohan's version),  
                 <br>
                 and instead of a vineyard, mine will be an apple orchard and I will have a horse to ride through the orchard.  
